--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -66,7 +66,7 @@ a{
 }
 .grid{
   background-color: #fff;
-  width: 70%;
+  width: 75%;
   height: 800px;
   margin-left: 190px;
   display: inline-table;
@@ -123,7 +123,7 @@ h2{
 .cuatro{
   background-color: #ff0004;
   position: absolute;
-  width: 250px;
+  width: 300px;
   height: 50px;
   top: 150px;
   left: 850px;
@@ -134,4 +134,25 @@ h4{
   display: inline-flex;
   font-family: 'Roboto', sans-serif;
   margin-left: 5px;
+}
+.edit{
+  position: absolute;
+  top: 120px;
+  left: 870px
+}
+.editorial{
+  color: #e63339;
+}
+.cinco{
+  width: 23%;
+  height: 210px;
+  background-color: #1363a9;
+  position: absolute;
+  top: 210px;
+  left: 850px
+
+}
+.parrafo-cinco{
+  position: relative;
+  width: 90px;
 }
