--- a/assets/css/stylesheet.css
+++ b/assets/css/stylesheet.css
@@ -10,9 +10,8 @@
     height: 200px;
     background-position: -5px -5px;
     position: absolute;
-    margin-top: -135px;
-    margin-left: 30px;
-    
+    margin-right: 0;
+
 }
 
 .sprite-alejandra-aramayo {
